# tse-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: get_instruments.rs  get_intraday.rs  get_prices.rs  group_prices.rs
src/: adjust.rs  client.rs  config.rs  error.rs  group.rs  intraday.rs  lib.rs  models.rs  request.rs  storage.rs  util.rs
tests/: public_api.rs  units.rs
